sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:78: error: forward reference extends over definition of variable baseTrou
    deplace(mod(baseTrou-1, nbBases), pos);
                ^